@@ -11,6 +11,7 @@ COM_PODCASTMANAGER_ACCESS_EDITOWN_DESCRIPTION="New setting for <strong>edit own 
 COM_PODCASTMANAGER_ACCESS_EDITSTATE_DESCRIPTION="New setting for <strong>edit state actions</strong> on this feed and the calculated setting based on the component and group permissions."
 COM_PODCASTMANAGER_BATCH_FEED_LABEL="Select Feed for Move/Copy"
 COM_PODCASTMANAGER_BATCH_OPTIONS="Batch process the selected feeds"
+COM_PODCASTMANAGER_BATCH_TIP="If choosing to copy a podcast, any other actions selected will be applied to the copied podcast. Otherwise, all actions are applied to the selected podcast."
 COM_PODCASTMANAGER_CONFIGURATION="Podcast Manager Configuration"
 COM_PODCASTMANAGER_CONFIG_FIELD_CACHE_DESCRIPTION="Cache the feed files."
 COM_PODCASTMANAGER_CONFIG_FIELD_CACHE_LABEL="Cache"
