@@ -19,17 +19,19 @@ $options = array(
 	JHtml::_('select.option', 'm', JText::_('JLIB_HTML_BATCH_MOVE'))
 );
 $published	= $this->state->get('filter.published');
-$extension	= $this->escape($this->state->get('filter.extension'));
 ?>
 <fieldset class="batch">
 	<legend><?php echo JText::_('COM_PODCASTMANAGER_BATCH_OPTIONS');?></legend>
+	<p><?php echo JText::_('COM_PODCASTMANAGER_BATCH_TIP'); ?></p>
+	<?php echo JHtml::_('batch.language'); ?>
+
 	<?php if ($published >= 0) : ?>
 	<label id="batch-choose-action-lbl" for="batch-feed-id">
 		<?php echo JText::_('COM_PODCASTMANAGER_BATCH_FEED_LABEL'); ?>
 	</label>
 	<select name="batch[feed_id]" class="inputbox" id="batch-feed-id">
 		<option value=""><?php echo JText::_('JSELECT') ?></option>
-		<?php echo JHtml::_('select.options', JHtml::_('podcast.feeds', $extension, array('published' => $published)));?>
+		<?php echo JHtml::_('select.options', JHtml::_('podcast.feeds', array('published' => $published)));?>
 	</select>
 	<?php echo JHtml::_('select.radiolist', $options, 'batch[move_copy]', '', 'value', 'text', 'm'); ?>
 	<?php endif; ?>
@@ -37,7 +39,7 @@ $extension	= $this->escape($this->state->get('filter.extension'));
 	<button type="submit" onclick="submitbutton('podcast.batch');">
 		<?php echo JText::_('JGLOBAL_BATCH_PROCESS'); ?>
 	</button>
-	<button type="button" onclick="document.id('batch-feed-id').value='';document.id('batch-access').value=''">
+	<button type="button" onclick="document.id('batch-feed-id').value='';document.id('batch-language').value=''">
 		<?php echo JText::_('JSEARCH_FILTER_CLEAR'); ?>
 	</button>
 </fieldset>
